syntax = "proto3";

package go.micro.srv.Login;

service Example {
	rpc Login(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Mobile = 1;
	string Password = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	string SessionId = 3;
}
